tz-local/resource/istio/sample/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-dev-drillquiz
spec:
  selector:
    matchLabels:
      app: devops-dev-drillquiz
  template:
    metadata:
      labels:
        org: tz
        team: drillquiz
        project: drillquiz
        environment: dev
        app: devops-dev-drillquiz
    spec:
      imagePullSecrets:
        - name: tz-registrykey
      containers:
        - name: devops-dev-drillquiz
          image: doohee323/drillquiz:836
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
  #        readinessProbe:
  #          httpGet:
  #            path: /health
  #            port: 8000
#          resources:
#            requests:
#              cpu: 500m
#              memory: 500Mi
#            limits:
#              cpu: 1000m
#              memory: 1000Mi
