tz-local/resource/istio/sample/prod/drillquiz.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: devops-dev-drillquiz-sv
spec:
  type: NodePort
  selector:
    app: devops-dev-drillquiz
  ports:
    - port: 80
      name: api-80
      targetPort: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-dev-drillquiz-ing
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
#    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: devops1.drillquiz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-dev-drillquiz-sv
            port:
              number: 80
  tls:
    - hosts:
        - devops1.drillquiz.com
      secretName: devops-dev-drillquiz-ssl

---
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: drillquiz-http-to-https
spec:
  servers:
  - hosts:
      - devops.drillquiz.com
      - sw.drillquiz.com
    port:
      name: http2
      number: 880
      protocol: HTTP2
    tls:
      httpsRedirect: false
  - hosts:
      - devops.drillquiz.com
      - sw.drillquiz.com
    port:
      number: 8443
      name: https-443
      protocol: HTTPS
    tls:
      credentialName: devops-dev-ssl
      mode: SIMPLE
      privateKey: sds
      serverCertificate: sds
  selector:
    istio: ingressgateway

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: devops-dev-vs
spec:
  gateways:
  - drillquiz-http-to-https
  hosts:
  - devops.drillquiz.com
  - sw.drillquiz.com
  http:
  - name: devops-dev-drillquiz-vs
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: devops-dev-drillquiz-sv.drillquiz.svc.cluster.local
  - name: devops-dev-sw-vs
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: devops-dev-drillquiz-sv.drillquiz.svc.cluster.local

---

apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-proxy
spec:
  type: ExternalName
  externalName: istio-ingressgateway.istio-system.svc.cluster.local
  ports:
  - name: http
    port: 880
    targetPort: 880
    protocol: TCP
  - name: https
    port: 8443
    targetPort: 8443
    protocol: TCP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drillquiz-to-istio-proxy
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: devops.drillquiz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway-proxy
            port:
              number: 880
  - host: sw.drillquiz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway-proxy
            port:
              number: 880
  tls:
    - hosts:
        - devops.drillquiz.com
        - sw.drillquiz.com
      secretName: drillquiz.istio-system-tls1
